--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #f4f4f4;
 }
 
 header {
@@ -29,3 +30,9 @@ footer {
   text-align: center;
   padding: 10px;
 }
+.profile-photo {
+  border-radius: 50%;
+  max-width: 150px;
+  margin-bottom: 10px;
+}
+
