--- a/style.css
+++ b/style.css
@@ -4,41 +4,36 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #f4f4f4;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
+.header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
 }
 
-section {
-  padding: 40px;
-}
-
-.project-card {
-  border: 1px solid #ddd;
-  padding: 20px;
-  margin-bottom: 20px;
-}
-
-footer {
-  background-color: #333;
-  color: #fff;
+.profile-section {
   text-align: center;
-  padding: 10px;
+}
+
+.icons-section {
+  display: flex;
 }
 
 .profile-photo {
   border-radius: 50%;
   max-width: 150px;
   margin-bottom: 10px;
-}
-
-.icon {
-  width: 30px; /* Adjust the size as needed */
   margin-right: 10px;
 }
 
+.icon {
+  width: 30px;
+  margin-right: 10px;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+}
