--- a/style.css
+++ b/style.css
@@ -4,13 +4,42 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #f4f4f4;
+}
+
+nav {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
 }
 
 .header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
 }
 
 .profile-section {
@@ -28,20 +57,13 @@ body {
   margin-right: 10px;
 }
 
-.project-card {
-  border: 1px solid #ddd;
-  padding: 20px;
-  margin-bottom: 20px;
-}
-
 .icon {
   width: 30px;
   margin-right: 10px;
 }
 
-header {
-  background-color: #333;
-  color: #fff;
+section {
+  padding: 20px;
 }
 
 footer {
@@ -50,3 +72,4 @@ footer {
   text-align: center;
   padding: 10px;
 }
+
