--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header {
 
 .experience .job-title {
   font-weight: bold;
-  color: #007bff;
+  color: #000;
   font-size: 1.2em;
   margin-bottom: 5px;
   padding: 10px;
